Fix - Spacing on sidebar tab list

--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -103,7 +103,7 @@
 					font-size: 14px;
 					font-weight: 500;
 					margin-bottom: 15px;
-					padding-bottom: 10px;
+					padding-bottom: 15px;
 					color: $color-gray-darker;
 					border-bottom: 1px solid $color-white-darken;
 
